docs/api/qiskit/1.3/qiskit.transpiler.passes.PulseGates.mdx
---
title: PulseGates (v1.3)
description: API reference for qiskit.transpiler.passes.PulseGates in qiskit v1.3
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit.transpiler.passes.PulseGates
---

# PulseGates

<Class id="qiskit.transpiler.passes.PulseGates" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/transpiler/passes/calibration/pulse_gate.py#L27-L100" signature="qiskit.transpiler.passes.PulseGates(*args, **kwargs)" modifiers="class">
  Bases: `CalibrationBuilder`

  Pulse gate adding pass.

  This pass adds gate calibrations from the supplied `InstructionScheduleMap` to a quantum circuit.

  This pass checks each DAG circuit node and acquires a corresponding schedule from the instruction schedule map object that may be provided by the target backend. Because this map is a mutable object, the end-user can provide a configured backend to execute the circuit with customized gate implementations.

  This mapping object returns a schedule with “publisher” metadata which is an integer Enum value representing who created the gate schedule. If the gate schedule is provided by end-users, this pass attaches the schedule to the DAG circuit as a calibration.

  This pass allows users to easily override quantum circuit with custom gate definitions without directly dealing with those schedules.

  **References**

  *   \[1] OpenQASM 3: A broader and deeper quantum assembly language [https://arxiv.org/abs/2104.14722](https://arxiv.org/abs/2104.14722)

  Create new pass.

  <Admonition title="Deprecated since version 1.3" type="danger">
    The class `qiskit.transpiler.passes.calibration.pulse_gate.PulseGates` is deprecated as of Qiskit 1.3. It will be removed in Qiskit 2.0. The entire Qiskit Pulse package is being deprecated and will be moved to the Qiskit Dynamics repository: [https://github.com/qiskit-community/qiskit-dynamics](https://github.com/qiskit-community/qiskit-dynamics). Note that once removed, `qiskit.transpiler.passes.calibration.pulse_gate.PulseGates` will have no alternative in Qiskit.
  </Admonition>

  **Parameters**

  *   **inst\_map** – Instruction schedule map that user may override.
  *   **target** – The [`Target`](qiskit.transpiler.Target "qiskit.transpiler.Target") representing the target backend, if both `inst_map` and `target` are specified then it updates instructions in the `target` with `inst_map`.

  ## Attributes

  ### is\_analysis\_pass

  <Attribute id="qiskit.transpiler.passes.PulseGates.is_analysis_pass">
    Check if the pass is an analysis pass.

    If the pass is an AnalysisPass, that means that the pass can analyze the DAG and write the results of that analysis in the property set. Modifications on the DAG are not allowed by this kind of pass.
  </Attribute>

  ### is\_transformation\_pass

  <Attribute id="qiskit.transpiler.passes.PulseGates.is_transformation_pass">
    Check if the pass is a transformation pass.

    If the pass is a TransformationPass, that means that the pass can manipulate the DAG, but cannot modify the property set (but it can be read).
  </Attribute>

  ## Methods

  ### execute

  <Function id="qiskit.transpiler.passes.PulseGates.execute" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/transpiler/basepasses.py#L189-L211" signature="execute(passmanager_ir, state, callback=None)">
    Execute optimization task for input Qiskit IR.

    **Parameters**

    *   **passmanager\_ir** ([*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)")) – Qiskit IR to optimize.
    *   **state** ([*PassManagerState*](qiskit.passmanager.PassManagerState "qiskit.passmanager.compilation_status.PassManagerState")) – State associated with workflow execution by the pass manager itself.
    *   **callback** ([*Callable*](https://docs.python.org/3/library/collections.abc.html#collections.abc.Callable "(in Python v3.13)") *| None*) – A callback function which is caller per execution of optimization task.

    **Returns**

    Optimized Qiskit IR and state of the workflow.

    **Return type**

    [tuple](https://docs.python.org/3/library/stdtypes.html#tuple "(in Python v3.13)")\[[*Any*](https://docs.python.org/3/library/typing.html#typing.Any "(in Python v3.13)"), [qiskit.passmanager.compilation\_status.PassManagerState](qiskit.passmanager.PassManagerState "qiskit.passmanager.compilation_status.PassManagerState")]
  </Function>

  ### get\_calibration

  <Function id="qiskit.transpiler.passes.PulseGates.get_calibration" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/transpiler/passes/calibration/pulse_gate.py#L87-L100" signature="get_calibration(node_op, qubits)">
    Gets the calibrated schedule for the given instruction and qubits.

    **Parameters**

    *   **node\_op** ([*Instruction*](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction")) – Target instruction object.
    *   **qubits** ([*List*](https://docs.python.org/3/library/typing.html#typing.List "(in Python v3.13)")) – Integer qubit indices to check.

    **Returns**

    Return Schedule of target gate instruction.

    **Raises**

    [**TranspilerError**](transpiler#qiskit.transpiler.TranspilerError "qiskit.transpiler.TranspilerError") – When node is parameterized and calibration is raw schedule object.

    **Return type**

    [*Schedule*](qiskit.pulse.Schedule "qiskit.pulse.schedule.Schedule") | [*ScheduleBlock*](qiskit.pulse.ScheduleBlock "qiskit.pulse.schedule.ScheduleBlock")
  </Function>

  ### name

  <Function id="qiskit.transpiler.passes.PulseGates.name" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/passmanager/base_tasks.py#L68-L70" signature="name()">
    Name of the pass.

    **Return type**

    [str](https://docs.python.org/3/library/stdtypes.html#str "(in Python v3.13)")
  </Function>

  ### run

  <Function id="qiskit.transpiler.passes.PulseGates.run" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/transpiler/passes/calibration/base_builder.py#L54-L79" signature="run(dag)">
    Run the calibration adder pass on dag.

    **Parameters**

    **dag** ([*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit._accelerate.circuit.DAGCircuit")) – DAG to schedule.

    **Returns**

    A DAG with calibrations added to it.

    **Return type**

    [*DAGCircuit*](qiskit.dagcircuit.DAGCircuit "qiskit._accelerate.circuit.DAGCircuit")
  </Function>

  ### supported

  <Function id="qiskit.transpiler.passes.PulseGates.supported" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/transpiler/passes/calibration/pulse_gate.py#L75-L85" signature="supported(node_op, qubits)">
    Determine if a given node supports the calibration.

    **Parameters**

    *   **node\_op** ([*Instruction*](qiskit.circuit.Instruction "qiskit.circuit.instruction.Instruction")) – Target instruction object.
    *   **qubits** ([*List*](https://docs.python.org/3/library/typing.html#typing.List "(in Python v3.13)")) – Integer qubit indices to check.

    **Returns**

    Return `True` is calibration can be provided.

    **Return type**

    [bool](https://docs.python.org/3/library/functions.html#bool "(in Python v3.13)")
  </Function>

  ### update\_status

  <Function id="qiskit.transpiler.passes.PulseGates.update_status" github="https://github.com/Qiskit/qiskit/tree/stable/1.3/qiskit/transpiler/basepasses.py#L213-L221" signature="update_status(state, run_state)">
    Update workflow status.

    **Parameters**

    *   **state** ([*PassManagerState*](qiskit.passmanager.PassManagerState "qiskit.passmanager.compilation_status.PassManagerState")) – Pass manager state to update.
    *   **run\_state** (*RunState*) – Completion status of current task.

    **Returns**

    Updated pass manager state.

    **Return type**

    [*PassManagerState*](qiskit.passmanager.PassManagerState "qiskit.passmanager.compilation_status.PassManagerState")
  </Function>
</Class>

